--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<title> This is coursera html!</title>
 </head>
 <body>
-<h1> Hello Coursera!</h1>
+<h1> Hello Coursera! This is a great course</h1>
 </body>
 </html>
